--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "airtable": "^0.12.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
